<resources>
<string name="ESS_error_ADencriptar">Call to ADenrypt FAILED</string>
<string name="ESS_error_ADencriptarStr">Call to ADencriptarStr FAILED</string>
<string name="ESS_error_FinishCriticalJob">FinishCriticalJob call FAILED</string>
<string name="ESS_error_InitCriticalJob">InitCriticalJob call FAILED</string>
<string name="ESS_error_generateOTPF">Generate_OTP_F2Ff call FAILED</string>
<string name="ESS_error_getEmptySigParams">GetEmptySigParams call FAILED</string>
<string name="ESS_error_initialization">ESS initialization error</string>
<string name="ESS_error_initialization_ini">Initialization error of ini configuration file</string>
<string name="ESS_error_license">License error</string>
<string name="ESS_error_preValidationOTPF">Call to PreValidation_OTP_F2Ff FAILED</string>
<string name="ESS_error_signature_configuration_parameters">Error in setting of signature parameters</string>
<string name="ESS_error_signed">Signed error</string>
<string name="_rename">Rename</string>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="account">My Account</string>
<string name="action_after_signing">Action after signing</string>
<string name="action_after_signing_description">Choose the default action after signing a document. Check \"My Account\" in the main menu</string>
<string name="activate_more_devices">If you want to activate more devices for your business</string>
<string name="add_custom_text">Add custom text</string>
<string name="add_custom_text_description">Add custom text in the upper left of the signature</string>
<string name="add_custom_text_message">The text will be added at the top left of the signature</string>
<string name="add_custom_text_title">Add custom text</string>
<string name="add_remember_psc">Añadir recordatorio</string>
<string name="an_error_has_occurred">An error has occurred</string>
<string name="androidx_startup">androidx.startup</string>
<string name="api_for_integration">An <b>API</b> to integrate with your own management systems</string>
<string name="app_name">SIGNply</string>
<string name="app_name_eeslib">ESSLib</string>
<string name="app_share_description">Invite via …</string>
<string name="app_share_error">The application could not be shared</string>
<string name="app_share_subject">SIGNply App: Android and iOS</string>
<string name="app_share_title">"Hello, 

 SIGNply is a fast, simple and secure application that I use for the handwritten digital signature of PDF documents with full guarantees. 

 Download it for free from https://firmar.online/signply/download"</string>
<string name="app_version">null</string>
<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
<string name="aready_subscription_code">You already have a subscription by code</string>
<string name="automate_signing_company_document_process">Automate the process of signing your company documents</string>
<string name="available_signatures_this_month" formatted="false">%s/%s available signatures this month</string>
<string name="billing_unavailable">The subscription service is not available, you must be logged in with a Google account</string>
<string name="black">Black</string>
<string name="blue">Blue</string>
<string name="bold">Bold</string>
<string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
<string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
<string name="bottomsheet_action_expand">Expand the bottom sheet</string>
<string name="bottomsheet_action_expand_halfway">Expand halfway</string>
<string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
<string name="bottomsheet_drag_handle_content_description">Drag handle</string>
<string name="cancel">@android:string/cancel</string>
<string name="cancel_when_u_want">Cancel whenever you want</string>
<string name="cancelled">Cancelled</string>
<string name="certificate">Digital certificate</string>
<string name="certificate_error">An error has occurred with the signing certificate</string>
<string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
<string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
<string name="character_counter_pattern">%1$d/%2$d</string>
<string name="clear_text_end_icon_content_description">Clear text</string>
<string name="click_sign_document_to_start">Press SIGN DOCUMENT to start!</string>
<string name="close">CLOSE</string>
<string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
<string name="common_google_play_services_enable_button">Enable</string>
<string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
<string name="common_google_play_services_enable_title">Enable Google Play services</string>
<string name="common_google_play_services_install_button">Install</string>
<string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
<string name="common_google_play_services_install_title">Get Google Play services</string>
<string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
<string name="common_google_play_services_notification_ticker">Google Play services error</string>
<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
<string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
<string name="common_google_play_services_update_button">Update</string>
<string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
<string name="common_google_play_services_update_title">Update Google Play services</string>
<string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
<string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
<string name="config_signature">Signature configuration</string>
<string name="contact_us">Contact us</string>
<string name="create_copy_on_google_drive">Save signed files on Google Drive</string>
<string name="custom_developments_for_your_business"><b>Custom developments</b> for your business</string>
<string name="delete">DELETE</string>
<string name="digitize_business">Digitize your business!</string>
<string name="fill_with_my_data">Fill with my data</string>
<string name="frequent_questions">FAQ</string>
<string name="go_forward">Continue</string>
<string name="gps_on_signature">GPS in signature</string>
<string name="have_a_suggestion">Tengo una sugerencia</string>
<string name="help">Help</string>
<string name="help_us_to_improve">¡Ayúdanos a mejorar!</string>
<string name="know_more">Know more</string>
<string name="local_documents">My documents</string>
<string name="menu">Menu</string>
<string name="no_documents">There are no documents</string>
<string name="or">or</string>
<string name="participant_name">Name and surname</string>
<string name="pencil_color">Pencil signature color</string>
<string name="pending">Pending</string>
<string name="pending_documents">Documentos pendientes</string>
<string name="personal_info">Personal info</string>
<string name="premium_features">Premium features</string>
<string name="privacy_policy">Privacy policy</string>
<string name="psc_required_action">Required action</string>
<string name="rate_us">Rate us</string>
<string name="requires_connection">Requires connection</string>
<string name="review">Review</string>
<string name="save">Save</string>
<string name="sdk_for_mobiles_app"><b>SDK</b> for mobile applications</string>
<string name="select_certificate">Select default certificate</string>
<string name="services">Services</string>
<string name="share">Share</string>
<string name="share_app">Share app</string>
<string name="sign_all_pages">Sign on all pages</string>
<string name="sign_any_type_document">Sign any type of document</string>
<string name="sign_any_type_document_description">Now you can sign images, Word documents, Excel, etc.</string>
<string name="sign_in_and_enjoy_advantages">Sign in for free, get 100 signatures per month and enjoy multiple advantages</string>
<string name="sign_out">Sign out</string>
<string name="sign_save_and_share">Sign, save and share</string>
<string name="sign_save_and_share_with_anyone">Sign documents, save everywhere and share with anyone</string>
<string name="sign_simply_its_signply">"Sign simply, it's SIGNply"</string>
<string name="signature_box_type">Signature box type</string>
<string name="signature_ltv">Long term signature</string>
<string name="signature_thickness">Signature thickness</string>
<string name="signature_validation">Signature validation</string>
<string name="signature_validation_description">Checks and validates the signatures contained in a document. Check additional information such as PAdES, LTV, etc. Included with SIGNply Premium</string>
<string name="signed">Signed</string>
<string name="signply_help_automate_signature_process">In <b>SIGNply we help you automate document signing processes</b> in your company by offering you several solutions</string>
<string name="signply_premium">SIGNply Premium</string>
<string name="signply_sdk_accept">ACCEPT</string>
<string name="signply_sdk_cancel">@android:string/cancel</string>
<string name="signply_sdk_email">Email</string>
<string name="signply_sdk_show_recipients">Choose participants</string>
<string name="signply_web">SIGNply website</string>
<string name="subscription_plan">Subscription plan</string>
<string name="use_terms">Terms of use</string>
<string name="use_user_certificate_summary">Sign with a certificate installed on the device</string>
<string name="username">Username</string>
<string name="version">Version</string>
<string name="what_is_new_in_signply">"What's new in SIGNply"</string>
</resources>