<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TextView android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/signply_help_automate_signature_process" />
	<TextView android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/sdk_for_mobiles_app" />
	<TextView android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/api_for_integration" />
	<TextView android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/custom_developments_for_your_business" />
	<Button android:id="@id/button_know_more" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/know_more" />
	<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:textSize="11.0sp" android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/review" />
		<Button android:textSize="10.0sp" android:id="@id/button_privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy" style="@style/Widget.MaterialComponents.Button.TextButton" />
		<TextView android:textSize="11.0sp" android:textColor="?colorOnSurface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" />
		<Button android:textSize="11.0sp" android:id="@id/button_use_terms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_terms" style="@style/Widget.MaterialComponents.Button.TextButton" />
	</LinearLayout>
</LinearLayout>
