<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:icon="@drawable/ic_baseline_save_24" android:id="@id/action_save" android:orderInCategory="1" android:title="@string/save" app:showAsAction="always" />
	<item android:icon="@drawable/ic_baseline_delete_24" android:id="@id/action_delete" android:orderInCategory="3" android:title="@string/delete" app:showAsAction="always" />
	<item android:icon="@drawable/ic_baseline_share_24" android:id="@id/action_share" android:orderInCategory="2" android:title="@string/share" app:showAsAction="always" />
	<item android:id="@id/action_rename" android:orderInCategory="4" android:title="@string/_rename" app:showAsAction="ifRoom" />
</menu>
