<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@id/action_cancel" android:visible="false" android:title="@string/signply_sdk_cancel" app:showAsAction="always" />
	<item android:id="@id/action_accept" android:visible="false" android:title="@string/signply_sdk_accept" app:showAsAction="always" />
	<item android:icon="@drawable/ic_baseline_people_24" android:id="@id/action_show_recipients" android:title="@string/signply_sdk_show_recipients" app:showAsAction="always" />
	<item android:icon="@drawable/ic_baseline_info_24_white" android:id="@id/action_info" android:title="@string/share" app:showAsAction="always" />
	<item android:icon="@drawable/ic_baseline_share_24" android:id="@id/action_share" android:title="@string/share" app:showAsAction="always" />
</menu>
