<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:textSize="30.0sp" android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/what_is_new_in_signply" android:fontFamily="@font/exo2_medium" style="@style/TextAppearance.AppCompat.Title" />
			<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip">
				<ImageView android:layout_gravity="center" android:layout_width="36.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_baseline_file_open_24" app:tint="@color/primary" />
				<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip">
					<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_any_type_document" android:fontFamily="@font/exo2_medium" style="@style/TextAppearance.AppCompat.Subhead" />
					</LinearLayout>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/sign_any_type_document_description" android:fontFamily="@font/exo2_medium" />
					<TextView android:textStyle="italic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/requires_connection" android:fontFamily="@font/exo2_medium" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
				<ImageView android:layout_gravity="center" android:layout_width="36.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_baseline_info_24" app:tint="@color/primary" />
				<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip">
					<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signature_validation" android:fontFamily="@font/exo2_medium" style="@style/TextAppearance.AppCompat.Subhead" />
						<ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_baseline_workspace_premium_24" android:layout_marginStart="2.0dip" />
					</LinearLayout>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/signature_validation_description" android:fontFamily="@font/exo2_medium" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
				<ImageView android:layout_gravity="center" android:layout_width="36.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_baseline_double_arrow_24" app:tint="@color/primary" />
				<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip">
					<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_after_signing" android:fontFamily="@font/exo2_medium" style="@style/TextAppearance.AppCompat.Subhead" />
					</LinearLayout>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/action_after_signing_description" android:fontFamily="@font/exo2_medium" />
				</LinearLayout>
			</LinearLayout>
			<Button android:id="@id/button_continue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/go_forward" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
