<?xml version="1.0" encoding="utf-8" ?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<com.google.android.material.tabs.TabLayout android:id="@id/tab_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<com.google.android.material.tabs.TabItem android:icon="@drawable/ic_baseline_schedule_24" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pending" />
		<com.google.android.material.tabs.TabItem android:icon="@drawable/ic_baseline_edit_24" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signed" />
	</com.google.android.material.tabs.TabLayout>
	<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/empty_list_layout_documents" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="32.0dip">
		<ImageView android:layout_gravity="center" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_baseline_phone_android_72_dark" />
		<TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/no_documents" android:fontFamily="@font/exo2_medium" style="@style/TextAppearance.AppCompat.Body1" />
	</LinearLayout>
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipeRefreshLayoutSP" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior">
		<androidx.recyclerview.widget.RecyclerView android:id="@id/documentsRecyclerViewSP" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
